--- a/resources/stylesheets/src/style.scss
+++ b/resources/stylesheets/src/style.scss
@@ -10,6 +10,7 @@ $tiny: modular-scale(-1);
 $black: rgb(74, 74, 74);
 $lightgrey: rgba(155,155,155,0.3);
 $grey: rgb(155, 155, 155);
+$headergrey: #F9F9F9;
 $white: #fff;
 $link: #0087C8;
 $base-border-color: #DDD;
